[package]
name = "blueprotobuf-lib"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
protox = "0.9.0"
prost-build = "0.14.1"
pbjson-build = "0.8.0"

[dependencies]
prost = "0.14.1"
prost-types = "0.14.1"
pbjson = "0.8.0"
pbjson-types = "0.8.0"
serde = "1.0.219"
specta = "2.0.0-rc.21"
tauri-specta = "2.0.0-rc.21"
